# parallel-util

./: CMakeLists.txt  README.md  parallel-util.hpp
.github/workflows/: macos.yml  test.yml  ubuntu.yml
include/: parallel-util.hpp
tests/: CMakeLists.txt  test-parallel-exec.cpp  test-parallel-for.cpp  test-parallel-map.cpp
